apps/base/media/sym-seerr/sym-seerr-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sym-seerr-external
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/instance: sym-seerr
    app.kubernetes.io/name: sym-seerr
    app.kubernetes.io/component: seerr
